# pyinfernal

./: CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: package.yml
docs/: conf.py  index.rst  related.rst  requirements.txt
docs/api/: index.rst
docs/api/cm/: cms.rst  index.rst  parsers.rst  pli.rst  results.rst
docs/api/infernal/: index.rst  profile.rst
docs/examples/: index.rst
docs/guide/: copyright.rst  index.rst  install.rst
include/libinfernal/: cm.pxd  cm_alidisplay.pxd  cm_file.pxd  cm_pipeline.pxd
patches/: cm_file.c.patch  cm_pipeline.c.patch
src/: CMakeLists.txt
src/easel/: CMakeLists.txt
src/hmmer/: CMakeLists.txt
src/infernal/: CMakeLists.txt
src/infernal/src/: CMakeLists.txt
src/pyinfernal/: __init__.py  cm.pyx
src/pyinfernal/fileobj/: bsd.h  linux.h
src/pyinfernal/infernal/: _cmsearch.py
src/pyinfernal/tests/: __init__.py  test_doctest.py
src/pyinfernal/tests/data/cms/: 5.c.cbm  5.c.cm  iss33.cm  tRNA.c.cbm  tRNA.c.cm
src/pyinfernal/tests/data/seqs/: 100k-4.fa
src/pyinfernal/tests/data/tables/: 5c.Z1.T50.tbl  5c.Z1.tbl  snR75.Z1.T50.tbl  tRNA.Z1.tbl
src/pyinfernal/tests/test_cm/: test_cmfile.py
src/pyinfernal/tests/test_infernal/: test_cmsearch.py
src/scripts/: generate_patches.py
src/scripts/cmake/: CythonExtension.cmake  FindPyHMMER.cmake
